# comictraslator

./: README.md  docker-compose.yaml  main.py
_envs/: gateway.env  rabbitmq.env
cleaner/: dockerfile
docs/: pyproject.toml
docs/src/: app.py
gateway/: .cfg  .dockerignore  dockerfile  pyproject.toml  req.txt
gateway/src/: main.py
gateway/src/apps/documents/: __init__.py  enums.py  repository.py  router.py  schemas.py  services.py  use_cases.py
gateway/src/apps/documents/repositories/: cleaner.py  documents.py  logs.py  ocr.py  translation.py
gateway/src/apps/documents/routers/: documents.py
gateway/src/apps/documents/schemas/: documents.py  router.py
gateway/src/apps/documents/schemas/routers/: documents.py
gateway/src/apps/documents/schemas/services/: cleaner.py  documents.py  ocr.py  renderer.py
gateway/src/apps/documents/services/: cleaner.py  ocr.py  renderer.py  services.py  translation.py
gateway/src/common/: settings.py
gateway/src/common/repositories/: rabbitmqrepository.py  rmqrepository.py
gateway/src/tools/: settings.py
metrics/: loki.yaml  prometheus.yaml  promtail.yaml
ocr/: req.txt
ocr/src/: app.py
shared/: settings.py
shared/repositories/: logs.py  rmqrepository.py  s3.py
shared/services/: logs.py  s3.py
translator/src/: app.py
